--- a/lab1.html
+++ b/lab1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Random Facts Finder</title>
+    <script type="text/javascript" src="lab2.js"></script>
 </head>
 <body>
-<script src="lab2.js"></script>
 
 <p id = "p">Hi everyone, my name is Pham Thuy Vu Ton, but you can call me Emilia.</p>
 <input type="button" onclick="modifyInto()" value="modify"/>
