--- a/lab2.html
+++ b/lab2.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Random Facts Finder</title>
+    <script src="lab2.js"></script>
 </head>
 <body>
 
 <p id = "para">Hi everyone, my name is Pham Thuy Vu Ton, but you can call me Emilia.</p>
-<input type="button" onclick="modifyInto()" value="Modify"/>
+<button onclick="modifyInto()" >Modify</button>
 
 <hr>
 
 Please put a number between 10 and 15:<br>
 <input type="text" name="number" />
-<input type="button" onclick="validate()" value="Submit" /><br>
+<button onclick="validate()" >Submit</button>
 
-<script scr="lab2.js"></script>
+
 </body>
 </html>
