--- a/lab2.html
+++ b/lab2.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Random Facts Finder</title>
-    <script src="lab2.js"></script>
+
 </head>
 <body>
 
 <p id = "para">Hi everyone, my name is Pham Thuy Vu Ton, but you can call me Emilia.</p>
-<button onclick="modifyInto()" >Modify</button>
+<button onclick="myFunction()" >Modify</button>
 
 <hr>
 
@@ -16,6 +16,20 @@ Please put a number between 10 and 15:<br>
 <input type="text" name="number" />
 <button onclick="validate()" >Submit</button>
 
-
+<script>
+    function myFunction() {
+        var x = document.getElementById("demo");
+        x.style.color = "red";
+    }
+    function validate(){
+        if (isNaN(a) || a<10 || a >15)
+        {
+            text="input is out of range, not valid";
+        }
+        else{
+            text="input OK";
+        }
+    }
+</script>
 </body>
 </html>
